--- a/index.html
+++ b/index.html
@@ -1,67 +1,58 @@
 ﻿<!DOCTYPE html>
 <html>
-   <style>
-      #header 
-      {
-         background-color:green;
-         color:white;
-         text-align:center;
-         padding:1px;
-      }
-      #left 
-      {
-         line-height:30px;
-         background-color:gray;
-         height:550px;
-         width:150px;
-         float:left;
-         padding:5px;	      
-      }
-      #section 
-      {
-         width:350px;
-         float:left;
-         padding:10px;
-         color:black;	 	 
-      }
-      #footer 
-      {
-         background-color:green;
-         clear:both;
-         text-align:center;
-         padding:5px;
-      }
-      p {color:black;}
-      li
-      {
-         padding:30px;
-         display:inline;
-      }
-   </style>
-   <head> <title>Sean Pador Portfolio</title>
-   <body>
-      <div id="header">
-      <h1>Portfolio of Sean Pador</h1>
-      </div>
-      <div id="left">
-         <h2>Work</h2>
-         <a href="https://www.dropbox.com/s/wzu9xno9scp3j5l/Simple%20C%23%20Game.zip?dl=0">C++ Game</a>
-      </div>
-      <div id="section">
-      <h2>About</h2>
-      <p>I am a Computer Science Major who had graduated from 
-         Indiana University South Bend. I have learned a lot 
-         from my studies and I have also participated in projects 
-         with the app development club on campus. Experience is 
-         something I value most and something I am eager in gaining more. 
-         In the end, all I want to do is find a place where my skills 
-         are needed and appreciated.</p>
-      </div>
-      <div id="footer">
-          <ul>
-          <li>spador92@gmail.com</li>
-          <li><a href="https://www.linkedin.com/in/sean-pador-787225b4">Linkedin Profile</a></li>
-          </ul>
-      </div>
-   </body>
+<head>
+<style>
+#header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:100px;
+    float:left;
+    padding:5px;	      
+}
+#section {
+    width:350px;
+    float:left;
+    padding:10px;	 	 
+}
+#footer {
+    background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:5px;	 	 
+}
+</style>
+</head>
+<body>
+
+<div id="header">
+<h1>City Gallery</h1>
+</div>
+
+<div id="nav">
+London<br>
+Paris<br>
+Tokyo
+</div>
+
+<div id="section">
+<h2>London</h2>
+<p>London is the capital city of England. It is the most populous city in the United Kingdom,
+with a metropolitan area of over 13 million inhabitants.</p>
+<p>Standing on the River Thames, London has been a major settlement for two millennia,
+its history going back to its founding by the Romans, who named it Londinium.</p>
+</div>
+
+<div id="footer">
+Copyright © W3Schools.com
+</div>
+
+</body>
 </html>
